--- a/tomcat/md/架构简介.md
+++ b/tomcat/md/架构简介.md
@@ -9,7 +9,7 @@
 ![架构图1](../images/架构图1.png)
 ![架构图2](../images/架构图2.png)
 * 配置文件  
-```xml
+```java
 <Server port="8005" shutdown="SHUTDOWN">
   <Service name="Catalina">
     <Connector port="8080" protocol="HTTP/1.1"
