--- a/tomcat/md/架构简介.md
+++ b/tomcat/md/架构简介.md
@@ -9,28 +9,7 @@
 ![架构图1](../images/架构图1.png)
 ![架构图2](../images/架构图2.png)
 * 配置文件  
-```java
-<Server port="8005" shutdown="SHUTDOWN">
-  <Service name="Catalina">
-    <Connector port="8080" protocol="HTTP/1.1"
-               connectionTimeout="20000"
-               redirectPort="8443" />
-    <Connector port="8009" protocol="AJP/1.3" redirectPort="8443" />
-    <Engine name="Catalina" defaultHost="localhost">
-      <Realm className="org.apache.catalina.realm.LockOutRealm">
-        <Realm className="org.apache.catalina.realm.UserDatabaseRealm"
-               resourceName="UserDatabase"/>
-      </Realm>
-      <Host name="localhost"  appBase="webapps"
-            unpackWARs="true" autoDeploy="true">
-        <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
-               prefix="localhost_access_log" suffix=".txt"
-               pattern="%h %l %u %t &quot;%r&quot; %s %b" />
-      </Host>
-    </Engine>
-  </Service>
-</Server>
-```
+![配置文件](../images/配置文件.png)
 ##### <span id="zujianjianjie">**组件简介**</span>
 * 公用组件重要的接口：Lifecycle（生命周期）、LifecycleBase...
 * Server：Tomcat最顶层的容器，至少需要包含一个Service节点，标准实现类org.apache.catalina.core.StandardServer
