--- a/tomcat/md/架构简介.md
+++ b/tomcat/md/架构简介.md
@@ -11,7 +11,7 @@
 * 配置文件  
 ![配置文件](../images/配置文件.png)
 ##### <span id="zujianjianjie">**组件简介**</span>
-* 公用组件重要的接口：Lifecycle（生命周期）、LifecycleBase...
+* 公用组件重要的接口：Lifecycle（生命周期）、LifecycleBase、LifecycleMBeanBase、JmxEnabled...
 * Server：Tomcat最顶层的容器，至少需要包含一个Service节点，标准实现类org.apache.catalina.core.StandardServer
 * Service：用于组装connector、container、jmx、naming、session...
     * Connector：请求连接器，处理逻辑交给Container，包涵http接收器、arp静态资源接收器...
@@ -20,5 +20,9 @@
         - Host: 表示包含一个或多个Context容器的虚拟主机
         - Contetx: 表示一个Web应用程序。一份Context可以有多个Wrapper
         - Wrapper: 表示一个独立的servlet
-* [架构初窥](https://www.jianshu.com/p/c8eb69a5a760)
+* 参考文章系列  
+1、[架构初窥](https://www.jianshu.com/p/c8eb69a5a760)
 ##### <span id="zongjie">**总结**</span>
+1、tomcat是一系列组件嵌套和组合而成的
+2、核心组件都实现了Lifecycle接口来实现生命周期的控制
+3、核心组件都实现了JmxEnabled接口来实现Jmx功能
