--- a/tomcat/md/流程处理.md
+++ b/tomcat/md/流程处理.md
@@ -23,16 +23,16 @@ Acceptor和Pollor之间是生产者消费者模式的关系，Acceptor不断向E
 * socket处理  
     1、Acceptor 线程组。用于接受新连接，并将新连接封装一下，选择一个 Poller 将新连接添加到 Poller 的事件队列中  
     2、Poller 线程组。用于监听 Socket 事件，当 Socket 可读或可写等等时，将 Socket 封装一下添加到 worker 线程池的任务队列中  
-    3、worker 线程组。用于对请求进行处理，包括分析请求报文并创建 Request 对象，调用容器的 pipeline 进行处理
-* 业务处理
-    1、每个核心容器上都有一个StandardPipeline
-    2、每一个容器的 StandardPipeline 上都会有多个已注册的 Valve，我们只关注每个容器的 Basic Valve。其他 Valve 都是在 Basic Valve 前执行  
-    3、request.getHost().getPipeline().getFirst().invoke() 先获取对应的 StandardHost，并执行其 pipeline  
-    4、request.getContext().getPipeline().getFirst().invoke() 先获取对应的 StandardContext,并执行其 pipeline  
-    5、request.getWrapper().getPipeline().getFirst().invoke() 先获取对应的 StandardWrapper，并执行其 pipeline  
-    6、StandardWrapper 的 Basic Valve是StandardWrapperValve  
-        1)、 allocate() 用来加载并初始化 Servlet，值的一提的是 Servlet 并不都是单例的，当 Servlet 实现了 SingleThreadModel 接口后，StandardWrapper 会维护一组 Servlet 实例，这是享元模式。当然了 SingleThreadModel 在 Servlet 2.4 以后就弃用了  
-        2)、 createFilterChain() 方法会从 StandardContext 中获取到所有的过滤器，然后将匹配 Request URL 的所有过滤器挑选出来添加到 filterChain 中  
-        3)、 doFilter() 执行过滤链,当所有的过滤器都执行完毕后调用 Servlet 的 service()方法  
+    3、worker 线程组。用于对请求进行处理，包括分析请求报文并创建 Request 对象，调用容器的 pipeline 进行处理  
+* 业务处理  
+1. 每个核心容器上都有一个StandardPipeline
+2. 每一个容器的 StandardPipeline 上都会有多个已注册的 Valve，我们只关注每个容器的 Basic Valve。其他 Valve 都是在 Basic Valve 前执行  
+3. request.getHost().getPipeline().getFirst().invoke() 先获取对应的 StandardHost，并执行其 pipeline  
+4. request.getContext().getPipeline().getFirst().invoke() 先获取对应的 StandardContext,并执行其 pipeline  
+5. request.getWrapper().getPipeline().getFirst().invoke() 先获取对应的 StandardWrapper，并执行其 pipeline  
+6. StandardWrapper 的 Basic Valve是StandardWrapperValve  
+    - allocate() 用来加载并初始化 Servlet，值的一提的是 Servlet 并不都是单例的，当 Servlet 实现了 SingleThreadModel 接口后，StandardWrapper 会维护一组 Servlet 实例，这是享元模式。当然了 SingleThreadModel 在 Servlet 2.4 以后就弃用了  
+    - createFilterChain() 方法会从 StandardContext 中获取到所有的过滤器，然后将匹配 Request URL 的所有过滤器挑选出来添加到 filterChain 中  
+    - doFilter() 执行过滤链,当所有的过滤器都执行完毕后调用 Servlet 的 service()方法  
 * 参考文章  
-1、[谈谈 Tomcat 请求处理流程](https://www.jianshu.com/p/6e2b744074bb)
+1、[谈谈 Tomcat 请求处理流程](https://www.jianshu.com/p/6e2b744074bb)  
