--- a/java/md/类加载器.md
+++ b/java/md/类加载器.md
@@ -8,6 +8,9 @@
     - 向前兼容：jdk1.2不推荐重写loadClass，新加了findClass来暴露给用户重写
     - SPI：SPI 接口是由引导类加载器来加载（BootstarapClassLoader）的，SPI 实现的 Java 类一般是由系统类加载器来加载(AppClassLoader)的，引导类加载器是无法找到 SPI 的实现类的，因为它只加载 Java 的核心库
     - 热加载功能需要的动态类加载器，例如OSGi的出现
+##### SPI破坏双亲委派原理
+* [为什么说SPI打破双亲委派机制](https://www.jianshu.com/p/9cf306550b0a)
+
 ##### 破坏双亲委派再次详解
 * 线程上下文类加载器
     - java默认的线程上下文类加载器为系统类加载器(AppClassLoader)，由setContextClassLoader实现
