--- a/technology/tomcat/md/流程处理.md
+++ b/technology/tomcat/md/流程处理.md
@@ -4,6 +4,15 @@
 * [请求流程](#qingqiuliucheng)
 * [总结](#zongjie)
 
+##### 图解
+* 调用关系
+![调用流程](../images/调用关系.png)
+* 线程模型
+![线程模型](../images/线程模型.png)
+![线程模型1](../images/线程模型1.png)
+* 类加载
+![类加载](../images/类加载.png)
+
 ##### <span id="Connector">**Connector**</span>
 * Connector负责解析socket请求  
     1、Http Connector：解析HTTP请求，又分为BIO Http Connector和NIO Http Connector，即阻塞IO Connector和非阻塞IO Connector。本文主要分析NIO Http Connector的实现过程  
