--- a/technology/java/md/分布式锁.md
+++ b/technology/java/md/分布式锁.md
@@ -18,6 +18,8 @@
       - 获取锁的时候还设置一个获取的超时时间，若超过这个时间则放弃获取锁。
       
       - 释放锁的时候，通过UUID判断是不是该锁，若是该锁，则执行delete进行锁释放
+      - [watch分布式锁简单入门以及三种实现方式介绍](https://blog.csdn.net/xlgen157387/article/details/79036337)
+      - [redis分布式锁原理与实现](https://blog.csdn.net/dazou1/article/details/88088223)
 - 基于zookeeper
     + 实现思想
         + 创建一个目录mylock；
